--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
     
     <link href="https://mbailleu.github.io/index.xml" rel="alternate" type="application/rss+xml" title="Maurice Bailleu" />
     
+    <style type="text/css">
+       a:link {color: black;}       
+       a:visited {color: black;}    
+       a:hover {color: black;}      
+       a:active {color: black;}     
+    </style>
 </head>
 
 <body>
