New line for MSR PhD Fellowship

--- a/about/index.html
+++ b/about/index.html
@@ -105,8 +105,8 @@
                     <h1 class="mx-0 mx-md-4">About</h1>
                     <div class="markdown">
                         
-    <p>My name is Maurice Bailleu and I am a PhD student at the <a href="https://www.ed.ac.uk/">University of Edinburgh</a>, member of <a href="https://web.inf.ed.ac.uk/icsa">Institute for Computing Systems Architecture (ICSA)</a>, supervised by <a href="https://dse.in.tum.de/bhatotia/">Prof. Pramod Bhatotia</a>.
-I am a recipient of the 2021-2022 Microsoft Research PhD Fellowship.</p>
+    <p>My name is Maurice Bailleu and I am a PhD student at the <a href="https://www.ed.ac.uk/">University of Edinburgh</a>, member of <a href="https://web.inf.ed.ac.uk/icsa">Institute for Computing Systems Architecture (ICSA)</a>, supervised by <a href="https://dse.in.tum.de/bhatotia/">Prof. Pramod Bhatotia</a>.</p>
+<p>I am a recipient of the 2021-2022 Microsoft Research PhD Fellowship.</p>
 <p>For my PhD, I am investigating ways to re-design high-end distributed trusted storage systems by leveraging modern trusted hardware modules.</p>
 <p>Before joining ICSA, I graduated from <a href="https://tu-dresden.de/?set_language=en">TU Dresden</a>, Germany.</p>
 <p>Interests: Distributed and Dependable Systems, Secure Storage, File Systems, Intel SGX, Operating Systems, Parallel Architectures, Memory System.</p>
