--- a/publications/index.html
+++ b/publications/index.html
@@ -110,7 +110,7 @@
                     
                     <li>
                         <h2 class="meta-title">
-                            <a href=" https://dsn2022.github.io/ ">Treaty: Secure Distributed Transactions</a>
+                            <a href=" https://ieeexplore.ieee.org/document/9833660 ">Treaty: Secure Distributed Transactions</a>
                         </h2>
                         <div class="meta-date">
                             
