--- a/series/index.html
+++ b/series/index.html
@@ -5,22 +5,23 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>404 Page not found | Maurice Bailleu</title>
+<title>Series | Maurice Bailleu</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="Maurice Bailleu">
-<link rel="canonical" href="https://mbailleu.github.io/404.html">
+<link rel="canonical" href="https://mbailleu.github.io/series/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.min.7da7716a1f2d0725f74c6ae7f8d6adafc43aabe2b366b65bfbf433448e2a2001.css" integrity="sha256-fadxah8tByX3TGrn&#43;Natr8Q6q&#43;KzZrZb&#43;/QzRI4qIAE=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://mbailleu.github.io/favicon.ico">
 <link rel="apple-touch-icon" href="https://mbailleu.github.io/apple-touch-icon.png">
-<link rel="alternate" hreflang="en" href="https://mbailleu.github.io/404.html">
+<link rel="alternate" type="application/rss+xml" href="https://mbailleu.github.io/series/index.xml">
+<link rel="alternate" hreflang="en" href="https://mbailleu.github.io/series/">
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="404 Page not found | Maurice Bailleu" />
+<meta name="twitter:title" content="Series | Maurice Bailleu" />
 <meta name="twitter:description" content="" />
-<meta property="og:title" content="404 Page not found | Maurice Bailleu" />
+<meta property="og:title" content="Series | Maurice Bailleu" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://mbailleu.github.io/404.html" />
+<meta property="og:url" content="https://mbailleu.github.io/series/" />
     <meta property="og:image" content="https://mbailleu.github.io/cover.png"/>
 
 <style>
@@ -89,7 +90,7 @@
 
 </head>
 
-<body class="list-page type-page kind-404 layout-" id="top"><script data-no-instant>
+<body class="list-page type-series kind-taxonomy layout-" id="top"><script data-no-instant>
 function switchTheme(theme) {
   switch (theme) {
     case 'light':
@@ -200,7 +201,12 @@ function toggleThemeListener() {
     </nav>
 </header>
 <main class="main">
-<div class="not-found">404</div>
+<header class="page-header">
+    <h1>Series</h1>
+</header>
+
+<ul class="terms-tags">
+</ul>
     </main>
     
 <footer class="footer">
