--- a/publications/caps/index.html
+++ b/publications/caps/index.html
@@ -7,8 +7,12 @@
 <meta name="robots" content="index, follow">
 <title>Patent: Interoperable capabilities  | Maurice Bailleu</title>
 <meta name="keywords" content="">
-<meta name="description" content="PDF Presentation Video Code
-Abstract Example implementations relate to an interoperable capability. For example, in an implementation, an interoperable capability is recognizable by a plurality of kernels of a system, and the interoperable capability references a local capability of respective kernels. Consistency among the local capabilities of the kernels and the interoperable capability is maintained, in response to operations invoked on the interoperable capability.">
+<meta name="description" content="PDF    
+Presentation    
+Video    
+Code
+Abstract
+Example implementations relate to an interoperable capability. For example, in an implementation, an interoperable capability is recognizable by a plurality of kernels of a system, and the interoperable capability references a local capability of respective kernels. Consistency among the local capabilities of the kernels and the interoperable capability is maintained, in response to operations invoked on the interoperable capability.">
 <meta name="author" content="Maurice Bailleu">
 <link rel="canonical" href="https://mbailleu.github.io/publications/caps/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.min.7da7716a1f2d0725f74c6ae7f8d6adafc43aabe2b366b65bfbf433448e2a2001.css" integrity="sha256-fadxah8tByX3TGrn&#43;Natr8Q6q&#43;KzZrZb&#43;/QzRI4qIAE=" rel="preload stylesheet" as="style">
@@ -17,11 +21,19 @@ Abstract Example implementations relate to an interoperable capability. For exam
 <link rel="alternate" hreflang="en" href="https://mbailleu.github.io/publications/caps/">
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Patent: Interoperable capabilities  | Maurice Bailleu" />
-<meta name="twitter:description" content="PDF Presentation Video Code
-Abstract Example implementations relate to an interoperable capability. For example, in an implementation, an interoperable capability is recognizable by a plurality of kernels of a system, and the interoperable capability references a local capability of respective kernels. Consistency among the local capabilities of the kernels and the interoperable capability is maintained, in response to operations invoked on the interoperable capability." />
+<meta name="twitter:description" content="PDF    
+Presentation    
+Video    
+Code
+Abstract
+Example implementations relate to an interoperable capability. For example, in an implementation, an interoperable capability is recognizable by a plurality of kernels of a system, and the interoperable capability references a local capability of respective kernels. Consistency among the local capabilities of the kernels and the interoperable capability is maintained, in response to operations invoked on the interoperable capability." />
 <meta property="og:title" content="Patent: Interoperable capabilities  | Maurice Bailleu" />
-<meta property="og:description" content="PDF Presentation Video Code
-Abstract Example implementations relate to an interoperable capability. For example, in an implementation, an interoperable capability is recognizable by a plurality of kernels of a system, and the interoperable capability references a local capability of respective kernels. Consistency among the local capabilities of the kernels and the interoperable capability is maintained, in response to operations invoked on the interoperable capability." />
+<meta property="og:description" content="PDF    
+Presentation    
+Video    
+Code
+Abstract
+Example implementations relate to an interoperable capability. For example, in an implementation, an interoperable capability is recognizable by a plurality of kernels of a system, and the interoperable capability references a local capability of respective kernels. Consistency among the local capabilities of the kernels and the interoperable capability is maintained, in response to operations invoked on the interoperable capability." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://mbailleu.github.io/publications/caps/" />
     <meta property="og:image" content="https://mbailleu.github.io/cover.png"/>
@@ -56,7 +68,7 @@ Abstract Example implementations relate to an interoperable capability. For exam
   "@type": "BlogPosting",
   "headline": "Patent: Interoperable capabilities  | Maurice Bailleu",
   "name": "Patent: Interoperable capabilities ",
-  "description": "PDF Presentation Video Code\nAbstract Example implementations relate to an interoperable capability. For example, in an implementation, an interoperable capability is recognizable by a plurality of kernels of a system, and the interoperable capability references a local capability of respective kernels. Consistency among the local capabilities of the kernels and the interoperable capability is maintained, in response to operations invoked on the interoperable capability.",
+  "description": "PDF Presentation Video Code\nAbstract Example implementations relate to an interoperable capability. For example, in an implementation, an interoperable capability is recognizable by a plurality of kernels of a system, and the interoperable capability references a local capability of respective kernels. Consistency among the local capabilities of the kernels and the interoperable capability is maintained, in response to operations invoked on the interoperable capability.\n",
   "keywords": [
     
   ],
