--- a/publications/speicher/index.html
+++ b/publications/speicher/index.html
@@ -7,8 +7,12 @@
 <meta name="robots" content="index, follow">
 <title>SPEICHER: Securing LSM-based Key-Value Stores using Shielded Execution | Maurice Bailleu</title>
 <meta name="keywords" content="">
-<meta name="description" content="PDF Presentation Video Code
-Abstract We introduce Speicher, a secure storage system that not only provides strong confidentiality and integrity properties, but also ensures data freshness to protect against rollback/forking attacks. Speicher exports a Key-Value (KV) interface backed by Log-Structured Merge Tree (LSM) for supporting secure data storage and query operations. Speicher enforces these security properties on an untrusted host by leveraging shielded execution based on a hardware-assisted trusted execution environment (TEE)—specifically, Intel SGX.">
+<meta name="description" content="PDF    
+Presentation    
+Video    
+Code
+Abstract
+We introduce Speicher, a secure storage system that not only provides strong confidentiality and integrity properties, but also ensures data freshness to protect against rollback/forking attacks. Speicher exports a Key-Value (KV) interface backed by Log-Structured Merge Tree (LSM) for supporting secure data storage and query operations. Speicher enforces these security properties on an untrusted host by leveraging shielded execution based on a hardware-assisted trusted execution environment (TEE)—specifically, Intel SGX. However, the design of Speicher extends the trust in shielded execution beyond the secure SGX enclave memory region to ensure that the security properties are also preserved in the stateful (or non-volatile) setting of an untrusted storage medium, including system crash, reboot, or migration.">
 <meta name="author" content="Maurice Bailleu">
 <link rel="canonical" href="https://mbailleu.github.io/publications/speicher/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.min.7da7716a1f2d0725f74c6ae7f8d6adafc43aabe2b366b65bfbf433448e2a2001.css" integrity="sha256-fadxah8tByX3TGrn&#43;Natr8Q6q&#43;KzZrZb&#43;/QzRI4qIAE=" rel="preload stylesheet" as="style">
@@ -17,11 +21,19 @@ Abstract We introduce Speicher, a secure storage system that not only provides s
 <link rel="alternate" hreflang="en" href="https://mbailleu.github.io/publications/speicher/">
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="SPEICHER: Securing LSM-based Key-Value Stores using Shielded Execution | Maurice Bailleu" />
-<meta name="twitter:description" content="PDF Presentation Video Code
-Abstract We introduce Speicher, a secure storage system that not only provides strong confidentiality and integrity properties, but also ensures data freshness to protect against rollback/forking attacks. Speicher exports a Key-Value (KV) interface backed by Log-Structured Merge Tree (LSM) for supporting secure data storage and query operations. Speicher enforces these security properties on an untrusted host by leveraging shielded execution based on a hardware-assisted trusted execution environment (TEE)—specifically, Intel SGX." />
+<meta name="twitter:description" content="PDF    
+Presentation    
+Video    
+Code
+Abstract
+We introduce Speicher, a secure storage system that not only provides strong confidentiality and integrity properties, but also ensures data freshness to protect against rollback/forking attacks. Speicher exports a Key-Value (KV) interface backed by Log-Structured Merge Tree (LSM) for supporting secure data storage and query operations. Speicher enforces these security properties on an untrusted host by leveraging shielded execution based on a hardware-assisted trusted execution environment (TEE)—specifically, Intel SGX. However, the design of Speicher extends the trust in shielded execution beyond the secure SGX enclave memory region to ensure that the security properties are also preserved in the stateful (or non-volatile) setting of an untrusted storage medium, including system crash, reboot, or migration." />
 <meta property="og:title" content="SPEICHER: Securing LSM-based Key-Value Stores using Shielded Execution | Maurice Bailleu" />
-<meta property="og:description" content="PDF Presentation Video Code
-Abstract We introduce Speicher, a secure storage system that not only provides strong confidentiality and integrity properties, but also ensures data freshness to protect against rollback/forking attacks. Speicher exports a Key-Value (KV) interface backed by Log-Structured Merge Tree (LSM) for supporting secure data storage and query operations. Speicher enforces these security properties on an untrusted host by leveraging shielded execution based on a hardware-assisted trusted execution environment (TEE)—specifically, Intel SGX." />
+<meta property="og:description" content="PDF    
+Presentation    
+Video    
+Code
+Abstract
+We introduce Speicher, a secure storage system that not only provides strong confidentiality and integrity properties, but also ensures data freshness to protect against rollback/forking attacks. Speicher exports a Key-Value (KV) interface backed by Log-Structured Merge Tree (LSM) for supporting secure data storage and query operations. Speicher enforces these security properties on an untrusted host by leveraging shielded execution based on a hardware-assisted trusted execution environment (TEE)—specifically, Intel SGX. However, the design of Speicher extends the trust in shielded execution beyond the secure SGX enclave memory region to ensure that the security properties are also preserved in the stateful (or non-volatile) setting of an untrusted storage medium, including system crash, reboot, or migration." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://mbailleu.github.io/publications/speicher/" />
     <meta property="og:image" content="https://mbailleu.github.io/cover.png"/>
@@ -56,7 +68,7 @@ Abstract We introduce Speicher, a secure storage system that not only provides s
   "@type": "BlogPosting",
   "headline": "SPEICHER: Securing LSM-based Key-Value Stores using Shielded Execution | Maurice Bailleu",
   "name": "SPEICHER: Securing LSM-based Key-Value Stores using Shielded Execution",
-  "description": "PDF Presentation Video Code\nAbstract We introduce Speicher, a secure storage system that not only provides strong confidentiality and integrity properties, but also ensures data freshness to protect against rollback/forking attacks. Speicher exports a Key-Value (KV) interface backed by Log-Structured Merge Tree (LSM) for supporting secure data storage and query operations. Speicher enforces these security properties on an untrusted host by leveraging shielded execution based on a hardware-assisted trusted execution environment (TEE)—specifically, Intel SGX.",
+  "description": "PDF Presentation Video Code\nAbstract We introduce Speicher, a secure storage system that not only provides strong confidentiality and integrity properties, but also ensures data freshness to protect against rollback/forking attacks. Speicher exports a Key-Value (KV) interface backed by Log-Structured Merge Tree (LSM) for supporting secure data storage and query operations. Speicher enforces these security properties on an untrusted host by leveraging shielded execution based on a hardware-assisted trusted execution environment (TEE)—specifically, Intel SGX. However, the design of Speicher extends the trust in shielded execution beyond the secure SGX enclave memory region to ensure that the security properties are also preserved in the stateful (or non-volatile) setting of an untrusted storage medium, including system crash, reboot, or migration.\n",
   "keywords": [
     
   ],
