Added Receipe paper

--- a/publications/tee_perf/index.html
+++ b/publications/tee_perf/index.html
@@ -15,7 +15,7 @@ Abstract
 We introduce TEE-PERF, an architecture-and platform-independent performance measurement tool for trusted execution environments (TEEs). More specifically, TEE-PERF supports method-level profiling for unmodified multithreaded applications, without relying on any architecture-specific hardware features (e.g. Intel VTune Amplifier), or without requiring platform-dependent kernel features (e.g. Linux perf). Moreover, TEE-PERF provides accurate profiling measurements since it traces the entire process execution without employing instruction pointer sampling. Thus, TEE-PERF does not suffer from sampling frequency bias, which can occur with threads scheduled to align to the sampling frequency. We have implemented TEE-P ERF with an easy to use interface, and integrated it with Flame Graphs to visualize the performance bottlenecks. We have evaluated TEE-PERF based on the Phoenix multithreaded benchmark suite and real-world applications (RocksDB, SPDK, etc.), and compared it with Linux perf. Our experimental evaluation shows that TEE-PERF incurs low profiling overheads, while providing accurate profile measurements to identify and optimize the application bottlenecks in the context of TEEs. TEE-PERF is publicly available.">
 <meta name="author" content="Maurice Bailleu">
 <link rel="canonical" href="https://mbailleu.github.io/publications/tee_perf/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.min.7da7716a1f2d0725f74c6ae7f8d6adafc43aabe2b366b65bfbf433448e2a2001.css" integrity="sha256-fadxah8tByX3TGrn&#43;Natr8Q6q&#43;KzZrZb&#43;/QzRI4qIAE=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.min.94e6ede60cdb25026b195bf037073de04337a061269e0b85e5bc8b9ef6ae02f0.css" integrity="sha256-lObt5gzbJQJrGVvwNwc94EM3oGEmnguF5byLnvauAvA=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://mbailleu.github.io/favicon.ico">
 <link rel="apple-touch-icon" href="https://mbailleu.github.io/apple-touch-icon.png">
 <link rel="alternate" hreflang="en" href="https://mbailleu.github.io/publications/tee_perf/">
@@ -349,7 +349,7 @@ function toggleThemeListener() {
     </main>
     
 <footer class="footer">
-  <span>&copy; 2024 <a href="https://mbailleu.github.io/">Maurice Bailleu</a></span><span style="display: inline-block; margin-left: 1em;">
+  <span>&copy; 2025 <a href="https://mbailleu.github.io/">Maurice Bailleu</a></span><span style="display: inline-block; margin-left: 1em;">
     <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
   </span>
   <span style="display: inline-block; margin-left: 1em;">
