--- a/publications/anchor/index.html
+++ b/publications/anchor/index.html
@@ -16,7 +16,7 @@ Abstract
 Cloud infrastructure is experiencing a shift towards disaggregated setups, especially with the introduction of the Compute Express Link (CXL) technology, where byte-addressable ersistent memory (PM) is becoming prominent. To fully utilize the potential of such devices, it is a necessity to access them through network stacks with equivalently high levels of performance (e.g., kernel-bypass, RDMA). While, these advancements are enabling the development of high-performance data management systems, their deployment on untrusted cloud environments also increases the security threats.">
 <meta name="author" content="Maurice Bailleu">
 <link rel="canonical" href="https://mbailleu.github.io/publications/anchor/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.min.7da7716a1f2d0725f74c6ae7f8d6adafc43aabe2b366b65bfbf433448e2a2001.css" integrity="sha256-fadxah8tByX3TGrn&#43;Natr8Q6q&#43;KzZrZb&#43;/QzRI4qIAE=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.min.94e6ede60cdb25026b195bf037073de04337a061269e0b85e5bc8b9ef6ae02f0.css" integrity="sha256-lObt5gzbJQJrGVvwNwc94EM3oGEmnguF5byLnvauAvA=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://mbailleu.github.io/favicon.ico">
 <link rel="apple-touch-icon" href="https://mbailleu.github.io/apple-touch-icon.png">
 <link rel="alternate" hreflang="en" href="https://mbailleu.github.io/publications/anchor/">
@@ -361,7 +361,7 @@ To overcome this challenge, we design a PM engine that ensures strong security p
     </main>
     
 <footer class="footer">
-  <span>&copy; 2024 <a href="https://mbailleu.github.io/">Maurice Bailleu</a></span><span style="display: inline-block; margin-left: 1em;">
+  <span>&copy; 2025 <a href="https://mbailleu.github.io/">Maurice Bailleu</a></span><span style="display: inline-block; margin-left: 1em;">
     <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
   </span>
   <span style="display: inline-block; margin-left: 1em;">
