--- a/publications/treaty/index.html
+++ b/publications/treaty/index.html
@@ -15,7 +15,7 @@ Abstract
 Distributed transaction processing is a fundamental building block for large-scale data management in the cloud. Given the threats of security violations in untrusted cloud environments, our work focuses on: How to design a distributed transactional KV store that achieves high-performance serializable transactions, while providing strong security properties?We introduce Treaty, a secure distributed transactional KV storage system that supports serializable ACID transactions while guaranteeing strong security properties: confidentiality, integrity, and freshness. Treaty leverages trusted execution environments (TEEs) to bootstrap its security properties, but it extends the trust provided by the limited enclave (volatile) memory region within a single node to build a secure (stateful) distributed transactional KV store over the untrusted storage, network and machines. To achieve this, Treaty embodies a secure two-phase commit protocol co-designed with a high-performance network library for TEEs. Further, Treaty ensures secure and crash-consistent persistency of committed transactions using a stabilization protocol. Our evaluation on a real hardware testbed based on the YCSB and TPC-C benchmarks shows that Treaty incurs reasonable overheads, while achieving strong security properties.">
 <meta name="author" content="Maurice Bailleu">
 <link rel="canonical" href="https://mbailleu.github.io/publications/treaty/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.min.7da7716a1f2d0725f74c6ae7f8d6adafc43aabe2b366b65bfbf433448e2a2001.css" integrity="sha256-fadxah8tByX3TGrn&#43;Natr8Q6q&#43;KzZrZb&#43;/QzRI4qIAE=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.min.94e6ede60cdb25026b195bf037073de04337a061269e0b85e5bc8b9ef6ae02f0.css" integrity="sha256-lObt5gzbJQJrGVvwNwc94EM3oGEmnguF5byLnvauAvA=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://mbailleu.github.io/favicon.ico">
 <link rel="apple-touch-icon" href="https://mbailleu.github.io/apple-touch-icon.png">
 <link rel="alternate" hreflang="en" href="https://mbailleu.github.io/publications/treaty/">
@@ -349,7 +349,7 @@ function toggleThemeListener() {
     </main>
     
 <footer class="footer">
-  <span>&copy; 2024 <a href="https://mbailleu.github.io/">Maurice Bailleu</a></span><span style="display: inline-block; margin-left: 1em;">
+  <span>&copy; 2025 <a href="https://mbailleu.github.io/">Maurice Bailleu</a></span><span style="display: inline-block; margin-left: 1em;">
     <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
   </span>
   <span style="display: inline-block; margin-left: 1em;">
