--- a/search/index.html
+++ b/search/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Search - Maurice Bailleu">
 <meta name="author" content="Maurice Bailleu">
 <link rel="canonical" href="https://mbailleu.github.io/search/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.min.7da7716a1f2d0725f74c6ae7f8d6adafc43aabe2b366b65bfbf433448e2a2001.css" integrity="sha256-fadxah8tByX3TGrn&#43;Natr8Q6q&#43;KzZrZb&#43;/QzRI4qIAE=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.min.94e6ede60cdb25026b195bf037073de04337a061269e0b85e5bc8b9ef6ae02f0.css" integrity="sha256-lObt5gzbJQJrGVvwNwc94EM3oGEmnguF5byLnvauAvA=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://mbailleu.github.io/favicon.ico">
 <link rel="apple-touch-icon" href="https://mbailleu.github.io/apple-touch-icon.png">
 <link rel="alternate" hreflang="en" href="https://mbailleu.github.io/search/">
@@ -268,7 +268,7 @@ function toggleThemeListener() {
     </main>
     
 <footer class="footer">
-  <span>&copy; 2024 <a href="https://mbailleu.github.io/">Maurice Bailleu</a></span><span style="display: inline-block; margin-left: 1em;">
+  <span>&copy; 2025 <a href="https://mbailleu.github.io/">Maurice Bailleu</a></span><span style="display: inline-block; margin-left: 1em;">
     <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
   </span>
   <span style="display: inline-block; margin-left: 1em;">
@@ -436,7 +436,7 @@ function toggleThemeListener() {
   mediumZoom('.post-content img:not([no-zoom])');
 </script>
 <link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
-<script defer crossorigin="anonymous" src="/assets/js/search.min.87af067722defe6a16f7371c8182dd0757527e8aa06fc4cc98144233aeec9e9a.js" integrity="sha256-h68GdyLe/moW9zccgYLdB1dSfoqgb8TMmBRCM67snpo="></script>
+<script defer crossorigin="anonymous" src="/assets/js/search.min.2ec17eaa15d2d0d85689525caebae49177e0c3c473005919f9d27672962baae7.js" integrity="sha256-LsF&#43;qhXS0NhWiVJcrrrkkXfgw8RzAFkZ&#43;dJ2cpYrquc="></script>
 </body>
 
 </html>
